[gd_scene load_steps=16 format=3 uid="uid://bagj2x3qnhgkh"]

[ext_resource type="Script" uid="uid://bdiy7eqm1bnty" path="res://addons/o2/src/EditorExtensions/Controls/EditorThemeTypeListPicker.gd" id="1_06h0j"]
[ext_resource type="Script" uid="uid://dg52ydkn8cb5v" path="res://addons/o2/src/EditorExtensions/Controls/EditorThemeIconFlowContainer.gd" id="2_06h0j"]
[ext_resource type="Script" uid="uid://dlnr7fechymbf" path="res://addons/o2/addons/metadata_scripts/src/metadata_scripts/MetadataScript.gd" id="3_6u2au"]
[ext_resource type="Script" uid="uid://da2vp20fitmmd" path="res://addons/o2/src/EditorExtensions/Controls/EditorThemeStyleBoxList.gd" id="3_jdnqq"]
[ext_resource type="Script" uid="uid://dlbfpgvtclufx" path="res://addons/o2/addons/metadata_scripts/src/metadata_scripts/MetadataScript_IfHasFeatureTag.gd" id="4_f8iy2"]
[ext_resource type="Script" uid="uid://cgmkhgex28eyb" path="res://addons/o2/src/EditorExtensions/Controls/DragAndDropPaletteList.gd" id="4_qw7ms"]

[sub_resource type="SVGTexture" id="SVGTexture_6u2au"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M2 1a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h1V3h9V2a1 1 0 0 0-1-1zm3 3a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1zm1 2h7v7H6z\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="GDScript" id="GDScript_2iupt"]
resource_name = "copied_label"
script/source = "@tool
extends Control

var tween : Tween

func _ready() -> void:
	modulate = Color.TRANSPARENT

func show_and_fade() -> void:
	modulate = Color.WHITE
	if tween: tween.kill()
	tween = create_tween()
	tween.tween_property(self, ^\"modulate\", Color.TRANSPARENT, 0.5)
	
"

[sub_resource type="Resource" id="Resource_6u2au"]
resource_path = "res://test/test_editor_controls.tscn::Resource_6u2au"
resource_name = "IfHasFeatureTag"
script = ExtResource("4_f8iy2")
feature = ""
invert = false

[sub_resource type="SVGTexture" id="SVGTexture_jdnqq"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"64\" height=\"64\"><g fill=\"#fff\"><path fill-opacity=\".2\" d=\"M0 0h64v64H0z\"/><path fill-opacity=\".4\" d=\"M0 0v16h16V0zm16 16v16h16V16zm16 0h16V0H32zm16 0v16h16V16zm0 16H32v16h16zm0 16v16h16V48zm-16 0H16v16h16zm-16 0V32H0v16z\"/></g></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qw7ms"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("SVGTexture_jdnqq")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(1, 1, 1, 0.14901961)

[sub_resource type="GDScript" id="GDScript_06h0j"]
script/source = "@tool
extends PanelContainer

signal dropped_data(data: Variant)
signal something_dragging(value: bool)

@export var print_dropped_data := true

func _notification(what: int) -> void:
	match what:
		NOTIFICATION_DRAG_BEGIN:
			something_dragging.emit(true)
		NOTIFICATION_DRAG_END:
			something_dragging.emit(false)

func _can_drop_data(_at_position: Vector2, _data: Variant) -> bool:
	return true
	
func _drop_data(_at_position: Vector2, data: Variant) -> void:
	if print_dropped_data:
		print(data)
	dropped_data.emit(data)
	
"

[sub_resource type="SVGTexture" id="SVGTexture_qw7ms"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m7 1v6h-6v2h6v6h2v-6h6v-2h-6v-6z\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_km6t1"]
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0
bg_color = Color(0.1088235, 0.1088235, 0.1088235, 1)
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8784314, 0.8784314, 0.8784314, 1)
corner_detail = 1
expand_margin_left = 6.0
expand_margin_top = 4.0
expand_margin_right = 6.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qw7ms"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.09068625, 0.09068625, 0.09068625, 1)
corner_detail = 1
anti_aliasing = false

[node name="Plugin Tools" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
current_tab = 0
drag_to_rearrange_enabled = true
metadata/_edit_lock_ = true

[node name="Icons" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_tab_index = 0
metadata/_edit_lock_ = true

[node name="GridContainer" type="GridContainer" parent="TabContainer/Icons"]
layout_mode = 2
columns = 2

[node name="LineEdit" type="LineEdit" parent="TabContainer/Icons/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Icons"
context_menu_enabled = false
clear_button_enabled = true

[node name="OptionButton" type="OptionButton" parent="TabContainer/Icons/GridContainer"]
layout_mode = 2
selected = 0
item_count = 32
popup/item_0/text = "EditorIcons"
popup/item_0/id = 0
popup/item_1/text = "OptionButton"
popup/item_1/id = 1
popup/item_2/text = "CheckButton"
popup/item_2/id = 2
popup/item_3/text = "CheckBox"
popup/item_3/id = 3
popup/item_4/text = "Tree"
popup/item_4/id = 4
popup/item_5/text = "TabContainer"
popup/item_5/id = 5
popup/item_6/text = "TabBar"
popup/item_6/id = 6
popup/item_7/text = "LineEdit"
popup/item_7/id = 7
popup/item_8/text = "TextEdit"
popup/item_8/id = 8
popup/item_9/text = "SplitContainer"
popup/item_9/id = 9
popup/item_10/text = "VSplitContainer"
popup/item_10/id = 10
popup/item_11/text = "HSplitContainer"
popup/item_11/id = 11
popup/item_12/text = "FoldableContainer"
popup/item_12/id = 12
popup/item_13/text = "Window"
popup/item_13/id = 13
popup/item_14/text = "FileDialog"
popup/item_14/id = 14
popup/item_15/text = "PopupMenu"
popup/item_15/id = 15
popup/item_16/text = "HScrollBar"
popup/item_16/id = 16
popup/item_17/text = "VScrollBar"
popup/item_17/id = 17
popup/item_18/text = "HSlider"
popup/item_18/id = 18
popup/item_19/text = "VSlider"
popup/item_19/id = 19
popup/item_20/text = "SpinBox"
popup/item_20/id = 20
popup/item_21/text = "GraphEdit"
popup/item_21/id = 21
popup/item_22/text = "GraphEditMinimap"
popup/item_22/id = 22
popup/item_23/text = "GraphElement"
popup/item_23/id = 23
popup/item_24/text = "GraphNode"
popup/item_24/id = 24
popup/item_25/text = "ColorPicker"
popup/item_25/id = 25
popup/item_26/text = "ColorPickerButton"
popup/item_26/id = 26
popup/item_27/text = "ColorPresetButton"
popup/item_27/id = 27
popup/item_28/text = "ProjectManager"
popup/item_28/id = 28
popup/item_29/text = "EditorSpinSlider"
popup/item_29/id = 29
popup/item_30/text = "AssetLib"
popup/item_30/id = 30
popup/item_31/text = "CodeEdit"
popup/item_31/id = 31
script = ExtResource("1_06h0j")

[node name="LabelAndCopiedLine" type="HBoxContainer" parent="TabContainer/Icons/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Icons/GridContainer/LabelAndCopiedLine"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
clip_text = true
text_overrun_behavior = 1

[node name="Copied" type="TextureRect" parent="TabContainer/Icons/GridContainer/LabelAndCopiedLine"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("SVGTexture_6u2au")
stretch_mode = 5
script = SubResource("GDScript_2iupt")

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Icons/GridContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TabContainer/Icons/GridContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 16.0
value = 32.0

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Icons"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Icons/PanelContainer"]
layout_mode = 2

[node name="Icons" type="HFlowContainer" parent="TabContainer/Icons/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_06h0j")

[node name="Styles" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1
metadata/_edit_lock_ = true

[node name="GridContainer" type="GridContainer" parent="TabContainer/Styles"]
layout_mode = 2
columns = 2
metadata/metadata_scripts = Array[ExtResource("3_6u2au")]([SubResource("Resource_6u2au")])

[node name="LineEdit" type="LineEdit" parent="TabContainer/Styles/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter StyleBoxes"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Styles/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
flat = true
selected = 44
item_count = 82
popup/item_0/text = "Panel"
popup/item_0/id = 0
popup/item_1/text = "PanelContainer"
popup/item_1/id = 1
popup/item_2/text = "TooltipPanel"
popup/item_2/id = 2
popup/item_3/text = "PopupPanel"
popup/item_3/id = 3
popup/item_4/text = "Button"
popup/item_4/id = 4
popup/item_5/text = "MenuButton"
popup/item_5/id = 5
popup/item_6/text = "MenuBar"
popup/item_6/id = 6
popup/item_7/text = "OptionButton"
popup/item_7/id = 7
popup/item_8/text = "CheckButton"
popup/item_8/id = 8
popup/item_9/text = "CheckBox"
popup/item_9/id = 9
popup/item_10/text = "LinkButton"
popup/item_10/id = 10
popup/item_11/text = "Tree"
popup/item_11/id = 11
popup/item_12/text = "ItemList"
popup/item_12/id = 12
popup/item_13/text = "TabContainer"
popup/item_13/id = 13
popup/item_14/text = "TabBar"
popup/item_14/id = 14
popup/item_15/text = "HSeparator"
popup/item_15/id = 15
popup/item_16/text = "VSeparator"
popup/item_16/id = 16
popup/item_17/text = "LineEdit"
popup/item_17/id = 17
popup/item_18/text = "TextEdit"
popup/item_18/id = 18
popup/item_19/text = "FoldableContainer"
popup/item_19/id = 19
popup/item_20/text = "Window"
popup/item_20/id = 20
popup/item_21/text = "AcceptDialog"
popup/item_21/id = 21
popup/item_22/text = "PopupDialog"
popup/item_22/id = 22
popup/item_23/text = "PopupMenu"
popup/item_23/id = 23
popup/item_24/text = "HScrollBar"
popup/item_24/id = 24
popup/item_25/text = "VScrollBar"
popup/item_25/id = 25
popup/item_26/text = "HSlider"
popup/item_26/id = 26
popup/item_27/text = "VSlider"
popup/item_27/id = 27
popup/item_28/text = "RichTextLabel"
popup/item_28/id = 28
popup/item_29/text = "Label"
popup/item_29/id = 29
popup/item_30/text = "SpinBox"
popup/item_30/id = 30
popup/item_31/text = "ProgressBar"
popup/item_31/id = 31
popup/item_32/text = "GraphEdit"
popup/item_32/id = 32
popup/item_33/text = "GraphEditMinimap"
popup/item_33/id = 33
popup/item_34/text = "GraphElement"
popup/item_34/id = 34
popup/item_35/text = "GraphNode"
popup/item_35/id = 35
popup/item_36/text = "GraphNodeTitleLabel"
popup/item_36/id = 36
popup/item_37/text = "GraphFrame"
popup/item_37/id = 37
popup/item_38/text = "GraphFrameTitleLabel"
popup/item_38/id = 38
popup/item_39/text = "VSRerouteNode"
popup/item_39/id = 39
popup/item_40/text = "ColorPicker"
popup/item_40/id = 40
popup/item_41/text = "ColorPresetButton"
popup/item_41/id = 41
popup/item_42/text = "ProjectManager"
popup/item_42/id = 42
popup/item_43/text = "ProjectTagButton"
popup/item_43/id = 43
popup/item_44/text = "EditorStyles"
popup/item_44/id = 44
popup/item_45/text = "ScrollContainer"
popup/item_45/id = 45
popup/item_46/text = "GamePanel"
popup/item_46/id = 46
popup/item_47/text = "MainScreenButton"
popup/item_47/id = 47
popup/item_48/text = "MainMenuBar"
popup/item_48/id = 48
popup/item_49/text = "RunBarButton"
popup/item_49/id = 49
popup/item_50/text = "BottomPanelButton"
popup/item_50/id = 50
popup/item_51/text = "EditorAudioBus"
popup/item_51/id = 51
popup/item_52/text = "EditorSpinSlider"
popup/item_52/id = 52
popup/item_53/text = "ProfilerAutostartIndicator"
popup/item_53/id = 53
popup/item_54/text = "FlatButton"
popup/item_54/id = 54
popup/item_55/text = "FlatMenuButton"
popup/item_55/id = 55
popup/item_56/text = "EditorLogFilterButton"
popup/item_56/id = 56
popup/item_57/text = "PanelBackgroundButton"
popup/item_57/id = 57
popup/item_58/text = "EditorSettingsDialog"
popup/item_58/id = 58
popup/item_59/text = "ProjectSettingsEditor"
popup/item_59/id = 59
popup/item_60/text = "EditorAbout"
popup/item_60/id = 60
popup/item_61/text = "InspectorActionButton"
popup/item_61/id = 61
popup/item_62/text = "PreviewLightButton"
popup/item_62/id = 62
popup/item_63/text = "TabContainerOdd"
popup/item_63/id = 63
popup/item_64/text = "EditorValidationPanel"
popup/item_64/id = 64
popup/item_65/text = "EditorInspector"
popup/item_65/id = 65
popup/item_66/text = "EditorProperty"
popup/item_66/id = 66
popup/item_67/text = "EditorInspectorSection"
popup/item_67/id = 67
popup/item_68/text = "EditorInspectorCategory"
popup/item_68/id = 68
popup/item_69/text = "AnimationTimelineEdit"
popup/item_69/id = 69
popup/item_70/text = "AnimationTrackEdit"
popup/item_70/id = 70
popup/item_71/text = "AnimationTrackEditGroup"
popup/item_71/id = 71
popup/item_72/text = "EditorHelp"
popup/item_72/id = 72
popup/item_73/text = "EditorHelpBitTitle"
popup/item_73/id = 73
popup/item_74/text = "EditorHelpBitContent"
popup/item_74/id = 74
popup/item_75/text = "AssetLib"
popup/item_75/id = 75
popup/item_76/text = "ThemeEditor"
popup/item_76/id = 76
popup/item_77/text = "VShaderEditor"
popup/item_77/id = 77
popup/item_78/text = "GraphStateMachine"
popup/item_78/id = 78
popup/item_79/text = "CodeEdit"
popup/item_79/id = 79
popup/item_80/text = "TreeSecondary"
popup/item_80/id = 80
popup/item_81/text = "ItemListSecondary"
popup/item_81/id = 81
script = ExtResource("1_06h0j")
type = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Styles/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Styles/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
clip_text = true

[node name="Copied" type="Label" parent="TabContainer/Styles/GridContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Copied!"
horizontal_alignment = 2
script = SubResource("GDScript_2iupt")

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Styles"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Styles/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_qw7ms")

[node name="Styles" type="VBoxContainer" parent="TabContainer/Styles/ScrollContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
script = ExtResource("3_jdnqq")
item_size = 120.0

[node name="Drag & Drop Palette" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
metadata/_tab_index = 2
metadata/_edit_lock_ = true

[node name="DropPanel" type="PanelContainer" parent="TabContainer/Drag & Drop Palette"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
script = SubResource("GDScript_06h0j")

[node name="CenterContainer" type="CenterContainer" parent="TabContainer/Drag & Drop Palette/DropPanel"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TabContainer/Drag & Drop Palette/DropPanel/CenterContainer"]
layout_mode = 2
texture = SubResource("SVGTexture_qw7ms")

[node name="Panel" type="Panel" parent="TabContainer/Drag & Drop Palette/DropPanel"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_km6t1")

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Drag & Drop Palette"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qw7ms")

[node name="FlowContainer" type="FlowContainer" parent="TabContainer/Drag & Drop Palette/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_qw7ms")

[connection signal="text_changed" from="TabContainer/Icons/GridContainer/LineEdit" to="TabContainer/Icons/PanelContainer/ScrollContainer/Icons" method="filter"]
[connection signal="type_selected" from="TabContainer/Icons/GridContainer/OptionButton" to="TabContainer/Icons/PanelContainer/ScrollContainer/Icons" method="set_theme_type"]
[connection signal="value_changed" from="TabContainer/Icons/GridContainer/HBoxContainer2/HSlider" to="TabContainer/Icons/PanelContainer/ScrollContainer/Icons" method="set_item_size"]
[connection signal="button_pressed" from="TabContainer/Icons/PanelContainer/ScrollContainer/Icons" to="TabContainer/Icons/GridContainer/LabelAndCopiedLine/Copied" method="show_and_fade"]
[connection signal="mouse_hovered_button" from="TabContainer/Icons/PanelContainer/ScrollContainer/Icons" to="TabContainer/Icons/GridContainer/LabelAndCopiedLine/Label" method="set_text"]
[connection signal="text_changed" from="TabContainer/Styles/GridContainer/LineEdit" to="TabContainer/Styles/ScrollContainer/PanelContainer/Styles" method="filter"]
[connection signal="type_selected" from="TabContainer/Styles/GridContainer/OptionButton" to="TabContainer/Styles/ScrollContainer/PanelContainer/Styles" method="set_theme_type"]
[connection signal="dropped_data" from="TabContainer/Drag & Drop Palette/DropPanel" to="TabContainer/Drag & Drop Palette/ScrollContainer/FlowContainer" method="add_item"]
[connection signal="something_dragging" from="TabContainer/Drag & Drop Palette/DropPanel" to="TabContainer/Drag & Drop Palette/DropPanel/Panel" method="set_visible"]
